--- a/cases/24-duty/index.html
+++ b/cases/24-duty/index.html
@@ -590,7 +590,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När appen skulle designas gick vi igenom de tre stegen i vår designprocess. Vi började med att undersöka marknaden och benchmarka andra on-demand-tjänster. Sen definierade vi appens behov ytterligare och tog fram wireframes och mockups. För att utvärdera designen och säkerställa att den var användarvänlig testades den på en fokusgrupp med hantverkare innan den skickades till utveckling. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När appen skulle designas gick vi igenom de tre stegen i vår designprocess. Vi började med att undersöka marknaden och benchmarka andra on-demand-tjänster. Sen definierade vi appens behov ytterligare och tog fram wireframes och mockups. För att utvärdera designen och säkerställa att den var användarvänlig testades den på en fokusgrupp med hantverkare innan den skickades till utveckling. <br />
                                  <br />
                                  När det kommer till appens UI utgick vi från den grafiska profil som kunden redan hade. Fokus låg på att ta fram en design som skulle reducera möjligheten att göra fel. När hantverkaren är ute på uppdrag kan det gå fort och appen ska vara ett hjälpande verktyg och inte ett krångligt hinder. Därför låg fokus på att hålla allt tydligt och fritt från onödiga distraktioner. 
                               </p>
@@ -599,7 +599,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När vi först drog igång projektet började vi med att lansera appen för hantverkarna. De kunde då ta emot beställningar som kunderna registrerat på hemsidan. I nästa runda kopplade vi på kundperspektivet så då kunde kunderna registrera sina uppdrag direkt i appen. Vi jobbar löpande med 24 Duty och har ständigt vidareutveckling på gång. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När vi först drog igång projektet började vi med att lansera appen för hantverkarna. De kunde då ta emot beställningar som kunderna registrerat på hemsidan. I nästa runda kopplade vi på kundperspektivet så då kunde kunderna registrera sina uppdrag direkt i appen. Vi jobbar löpande med 24 Duty och har ständigt vidareutveckling på gång. <br />
                                  <br />
                                  Appen är byggd i React Native som är en smidig lösning för att kunna använda samma kodbas både för Android och iOS. För att administrera appen valde vi Strapi som CMS. Där kan kunden hantera beställningar, lägga till nya hantverkare och helt enkelt ha kontroll över sin affär. 
                               </p>
