--- a/cases/alexander-white/index.html
+++ b/cases/alexander-white/index.html
@@ -516,13 +516,13 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Efter att ha jämfört olika designinriktningar och förslag landade vi i denna sparsmakade design i grått och beige där bildmaterialet får ta stor plats. De tunna linjerna i loggan inspirerade till att använda linjer som återkommande element. Det syns i knappar, meny, formulär och som dekorativ detalj. Dessutom tog vi fram ett symbolbibliotek som förstärker Alexander Whites budskap. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Efter att ha jämfört olika designinriktningar och förslag landade vi i denna sparsmakade design i grått och beige där bildmaterialet får ta stor plats. De tunna linjerna i loggan inspirerade till att använda linjer som återkommande element. Det syns i knappar, meny, formulär och som dekorativ detalj. Dessutom tog vi fram ett symbolbibliotek som förstärker Alexander Whites budskap. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Integration med mäklarsystem</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Det som gjorde denna webbplats mer tekniskt krävande var att den skulle kopplas ihop med ett externt system som byrån använder för sina objekt. I systemet registerar de bostäderna och fyller i information om dem. Objekten publiceras då automatiskt även på hemsidan och uppdateras allt eftersom ett objekt får ett nytt bud eller säljs. Det innebär att mäklarna inte längre behöver använda hemsidan utan kan fokusera på att lägga in objekten i systemet. En väl fungerande koppling av systemet underlättar vardagen för mäklarna!</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Det som gjorde denna webbplats mer tekniskt krävande var att den skulle kopplas ihop med ett externt system som byrån använder för sina objekt. I systemet registerar de bostäderna och fyller i information om dem. Objekten publiceras då automatiskt även på hemsidan och uppdateras allt eftersom ett objekt får ett nytt bud eller säljs. Det innebär att mäklarna inte längre behöver använda hemsidan utan kan fokusera på att lägga in objekten i systemet. En väl fungerande koppling av systemet underlättar vardagen för mäklarna!</p>
                            </div>
                         </div>
                      </div>
