--- a/cases/bonanza-location/index.html
+++ b/cases/bonanza-location/index.html
@@ -526,7 +526,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När plattformen skulle designas fick vår designer sätta tänderna i en färgglad och vågad palett med allt annat än en gråskala. Kunden var inte rädd för att måla utanför linjerna lite och det kan vi t.ex. se i startsidans “logotyp”. Valet föll nämligen på att inte använda den riktiga loggan utan istället göra en stor titel som sträcker sig över hela sidan. Det sticker ut lite från vad vi brukar se på hemsidor idag, men här blir det helt rätt som en vinkning till mediebranschen där många av tjänstens användare befinner sig. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När plattformen skulle designas fick vår designer sätta tänderna i en färgglad och vågad palett med allt annat än en gråskala. Kunden var inte rädd för att måla utanför linjerna lite och det kan vi t.ex. se i startsidans “logotyp”. Valet föll nämligen på att inte använda den riktiga loggan utan istället göra en stor titel som sträcker sig över hela sidan. Det sticker ut lite från vad vi brukar se på hemsidor idag, men här blir det helt rätt som en vinkning till mediebranschen där många av tjänstens användare befinner sig. <br />
                                  <br />
                                  Det viktigaste när man ska hyra en location är hur den ser ut. Därför behövde designen hjälpa till att lyfta fram platserna genom mycket utrymme för bilder. Typografin fick ta ett steg tillbaka för att ge plats åt bilderna och de djärva färgerna.
                               </p>
@@ -541,7 +541,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Eftersom användarna kommer ladda upp sina locations på egen hand i plattformen var det viktigt att också ha ett smidigt sätt att administrera dessa. Med hjälp av Strapi som CMS kan vår kund enkelt granska och redigera de locations som laddas upp innan de publiceras. Genom att granska dem i förväg kan de se till att alla håller samma höga nivå. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Eftersom användarna kommer ladda upp sina locations på egen hand i plattformen var det viktigt att också ha ett smidigt sätt att administrera dessa. Med hjälp av Strapi som CMS kan vår kund enkelt granska och redigera de locations som laddas upp innan de publiceras. Genom att granska dem i förväg kan de se till att alla håller samma höga nivå. <br />
                                  <br />
                                  För att våga hyra och hyra ut en bostad är det viktigt att känna förtroende för tjänsten och dess användare. Därför byggde vi en verifiering med bank-id som ett steg när man registrerar sig. <br />
                                  <br />
