--- a/cases/bonliva-care/index.html
+++ b/cases/bonliva-care/index.html
@@ -628,7 +628,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Vi är Bonlivas tech-team</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Som Bonlivas tech-team fick vi helhetsansvaret att utveckla både patientappen och psykologernas adminsystem. Projektet har pågått under lång tid och fortsätter löpande. Vi står dels för design och utveckling men stöttar också i affärsutveckling och att hitta balansen mellan nya features och bibehållen konsekvens och användarupplevelse.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Som Bonlivas tech-team fick vi helhetsansvaret att utveckla både patientappen och psykologernas adminsystem. Projektet har pågått under lång tid och fortsätter löpande. Vi står dels för design och utveckling men stöttar också i affärsutveckling och att hitta balansen mellan nya features och bibehållen konsekvens och användarupplevelse.</p>
                               <div class="TextRowsstyle__QuoteContainer-sc-f5buiq-15 ksgAax">
                                  <div class="TextRowsstyle__QuoteTextWrapper-sc-f5buiq-16 dglaMf">
                                     <h5 class="text__heading_sm-sc-1xracbr-5 TextRowsstyle__Quote-sc-f5buiq-17 iehGeS bkMcSp">&quot;Det var riktigt kul att jobba i ett så omfattande projekt och få vara aktiv i hur plattformen utformades.&quot;</h5>
@@ -640,13 +640,13 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">En app för patienterna...</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Ena delen av projektet var att utveckla appen som patienterna använder. I den kan man filtrera bland psykologer med olika specialområden, boka sitt samtal och om man valt ett digitalt möte kan man genomföra videosamtalet direkt i appen. Efter mötet får patienten sin behandlingsplan tillsammans med utvalda övningar tilldelade direkt i appen. Patienten kan också följa sitt välmående över tid i en hälsokurva.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Ena delen av projektet var att utveckla appen som patienterna använder. I den kan man filtrera bland psykologer med olika specialområden, boka sitt samtal och om man valt ett digitalt möte kan man genomföra videosamtalet direkt i appen. Efter mötet får patienten sin behandlingsplan tillsammans med utvalda övningar tilldelade direkt i appen. Patienten kan också följa sitt välmående över tid i en hälsokurva.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">... och ett system för psykologerna</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">I psykologernas plattform kan de hantera allt från schemaläggning till betalning,  genomföra samtal och följa patientens historik. Den “digifysiska” upplägget gör att de nu kan kan använda ett system både för sina fysiska och digitala möten. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">I psykologernas plattform kan de hantera allt från schemaläggning till betalning,  genomföra samtal och följa patientens historik. Den “digifysiska” upplägget gör att de nu kan kan använda ett system både för sina fysiska och digitala möten. <br />
                                  <br />
                                  För att automatisera arbetsflödet journalförs psykologernas anteckningar automatiskt I Webdoc och bokföringen uppdateras i Fortnox. Genom att samla allt på ett ställe och automatisera processer kan mindre tid läggas på administration och mer på patienten.
                               </p>
@@ -655,7 +655,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Med fokus på säkerhet</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Plattformen är byggd för att säkerställa patientsäkerheten, med säker lagring av personuppgifter, behandlingshistorik och skyddade videosamtal. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Plattformen är byggd för att säkerställa patientsäkerheten, med säker lagring av personuppgifter, behandlingshistorik och skyddade videosamtal. </p>
                            </div>
                         </div>
                      </div>
