--- a/cases/denona/index.html
+++ b/cases/denona/index.html
@@ -519,7 +519,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vi ville skapa en känsla av ett elegant magasin när vi tog fram denna design. För att göra detta valde vi att ha en ljusbeige bakgrund på hela siten som fungerar som det papper tidningen är tryckt på. Det lite annorlunda valet att inte låta innehållet gå hela vägen ut till kanterna gör att allt hänger ihop utan hårda avbrott och upplevs vara skrivet på samma beigea papper. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Vi ville skapa en känsla av ett elegant magasin när vi tog fram denna design. För att göra detta valde vi att ha en ljusbeige bakgrund på hela siten som fungerar som det papper tidningen är tryckt på. Det lite annorlunda valet att inte låta innehållet gå hela vägen ut till kanterna gör att allt hänger ihop utan hårda avbrott och upplevs vara skrivet på samma beigea papper. <br />
                                  <br />
                                  Det vackra bildmaterialet fick ta stor plats för att lyfta fram möblerna. Produktkortens fyrkantiga form inspirerade den övriga designen så vi ser vita rutor som ett återkommande element på siten. De vita rutorna, de många bilderna och att innehållet håller sig inom marginalerna är de röda trådarna som binder ihop designen. 
                               </p>
@@ -528,7 +528,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">För att uppnå målet att skapa en hemsida som är enkel att redigera på egen hand var det ett självklart val att bygga sidan med hjälp av flexibla block. Med ett helt bibliotek av fristående block kan deNONA enkelt byta ut innehållet på sidorna när de önskar. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">För att uppnå målet att skapa en hemsida som är enkel att redigera på egen hand var det ett självklart val att bygga sidan med hjälp av flexibla block. Med ett helt bibliotek av fristående block kan deNONA enkelt byta ut innehållet på sidorna när de önskar. <br />
                                  <br />
                                  Hemsidan använder WordPress som redigeringssystem där vi byggt ett skräddarsytt tema med helt egna flexibla block anpassat efter deNONAs behov. Siten är också förberedd för e-handel för privatpersoner med hjälp av Woocommerce som e-handelslösning.<br />
                                  <br />
