--- a/cases/foda-utan-radsla/index.html
+++ b/cases/foda-utan-radsla/index.html
@@ -603,7 +603,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Appen är ett extra stöd</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Det centrala i appen är att lära sig de fyra stödverktygen, som man gör i olika steg med hjälp av texter, video och ljudfiler. Ytterligare en viktig funktion är den coachande värkmätaren som stöttar under förlossningen med förvalda spellistor beståendes av guidande ord och olika typer av ljud. Mestadels av appens innehåll är gratis men vi har också byggt en premiumversion med extramaterial för betalande kunder, där man t.ex. kan gå en profylaxkurs. Vi utvecklade även möjlighet till annonsering på flera platser i appen.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Det centrala i appen är att lära sig de fyra stödverktygen, som man gör i olika steg med hjälp av texter, video och ljudfiler. Ytterligare en viktig funktion är den coachande värkmätaren som stöttar under förlossningen med förvalda spellistor beståendes av guidande ord och olika typer av ljud. Mestadels av appens innehåll är gratis men vi har också byggt en premiumversion med extramaterial för betalande kunder, där man t.ex. kan gå en profylaxkurs. Vi utvecklade även möjlighet till annonsering på flera platser i appen.</p>
                               <div class="TextRowsstyle__QuoteContainer-sc-f5buiq-15 ksgAax">
                                  <div class="TextRowsstyle__QuoteTextWrapper-sc-f5buiq-16 dglaMf">
                                     <h5 class="text__heading_sm-sc-1xracbr-5 TextRowsstyle__Quote-sc-f5buiq-17 iehGeS bkMcSp">&quot;Vi väljer gärna projekt som gör skillnad i människors liv&quot;</h5>
@@ -615,19 +615,19 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design och informationshierarki</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Det är en riktig utmaning att förvandla en hel bok till en app, så det gäller att tänka till i hur mycket information man ska förmedla och hur användaren tar till sig den på bästa sätt. Vi valde att dela upp metoden i olika delar och vägleda användaren så att den gör en sak i taget. Vi jobbade också mycket med tonaliteten i hela appen så att den skulle kännas som en vän på samma sätt som boken gör.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Det är en riktig utmaning att förvandla en hel bok till en app, så det gäller att tänka till i hur mycket information man ska förmedla och hur användaren tar till sig den på bästa sätt. Vi valde att dela upp metoden i olika delar och vägleda användaren så att den gör en sak i taget. Vi jobbade också mycket med tonaliteten i hela appen så att den skulle kännas som en vän på samma sätt som boken gör.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling i React Native</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När detta case landade på vårt bord var appen redan påbörjad så vår första uppgift var att kvalitetssäkra och slutföra projektet inför lansering. Appen byggdes i React Native som är en smidig lösning för att bygga appar som funkar på olika typer av telefoner.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">När detta case landade på vårt bord var appen redan påbörjad så vår första uppgift var att kvalitetssäkra och slutföra projektet inför lansering. Appen byggdes i React Native som är en smidig lösning för att bygga appar som funkar på olika typer av telefoner.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Stora ambitioner framöver</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Tillsammans har vi tagit appen i mål, via en förhandslansering för ett forskningsprojekt och till slut lansering för allmänheten. Nu har vi ett löpande samarbete där vi kontinuerligt bygger ut appen med nya funktioner. Ambitionerna är att utöka verksamheten till närliggande områden, utveckla samarbetet med vården och expandera globalt för att sprida möjligheterna till en förlossning utan rädsla.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Tillsammans har vi tagit appen i mål, via en förhandslansering för ett forskningsprojekt och till slut lansering för allmänheten. Nu har vi ett löpande samarbete där vi kontinuerligt bygger ut appen med nya funktioner. Ambitionerna är att utöka verksamheten till närliggande områden, utveckla samarbetet med vården och expandera globalt för att sprida möjligheterna till en förlossning utan rädsla.</p>
                            </div>
                         </div>
                      </div>
