--- a/cases/ida-warg-beauty/index.html
+++ b/cases/ida-warg-beauty/index.html
@@ -519,13 +519,13 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling i Shopify</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Lösningen blev att ta fram en smidig e-handelslösning i Shopify som vi anpassat enligt kundens behov och önskemål. Förutom betalnings- och leveranslösningar har vi också hjälpt dem att integrera system för marknadsföring och kundservice. Vi har ökat transparensen genom att utveckla ett system för kundrecensioner och möjliggjort snabbare kundservice genom att koppla på en livechatt. Vi integrerade ett system för nyhetsbrev som kan driva trafik till webbplatsen och såg till att kundens affiliate-system fungerade sömlöst med den. Dessutom är webbplatsen tillgänglig i flera olika länder, med olika språk, valutor och domäner.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Lösningen blev att ta fram en smidig e-handelslösning i Shopify som vi anpassat enligt kundens behov och önskemål. Förutom betalnings- och leveranslösningar har vi också hjälpt dem att integrera system för marknadsföring och kundservice. Vi har ökat transparensen genom att utveckla ett system för kundrecensioner och möjliggjort snabbare kundservice genom att koppla på en livechatt. Vi integrerade ett system för nyhetsbrev som kan driva trafik till webbplatsen och såg till att kundens affiliate-system fungerade sömlöst med den. Dessutom är webbplatsen tillgänglig i flera olika länder, med olika språk, valutor och domäner.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Resultatet</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Resultatet blev en lätthanterlig e-handel som nu står för stora försäljningsvolymer och är ytterligare en viktig distributionskanal för Ida Warg Beauty.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Resultatet blev en lätthanterlig e-handel som nu står för stora försäljningsvolymer och är ytterligare en viktig distributionskanal för Ida Warg Beauty.</p>
                            </div>
                         </div>
                      </div>
