--- a/cases/inrikta/index.html
+++ b/cases/inrikta/index.html
@@ -530,7 +530,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">“Få pejl på läget”</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När det var dags att ta all erfarenhet och expertis till ett digitalt system vände sig inRikta till oss på qte. Tillsammans har vi byggt systemet Pejlen, som hjälper kommunerna att få koll på läget och rätt riktning för fortsatt arbete.<br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När det var dags att ta all erfarenhet och expertis till ett digitalt system vände sig inRikta till oss på qte. Tillsammans har vi byggt systemet Pejlen, som hjälper kommunerna att få koll på läget och rätt riktning för fortsatt arbete.<br />
                                  <br />
                                  Pejlen är ett verktyg som går igenom stora mängder data för att upptäcka mönster, hålla koll på riskfaktorer och flagga vid avvikelser på ett systematiskt sätt. Därigenom blir det både ett effektivt ledningsstöd och ett verktyg för enskilda medarbetare att rikta och hantera uppföljning på individnivå.
                               </p>
@@ -539,7 +539,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Långsiktigt partnerskap</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vi har byggt den tekniska lösningen från grunden i nära samarbete med teamet på inRikta och kommuner. I det ingår allt från databashantering till frontendutveckling. Systemet bygger på stora mängder data som körs igenom utarbetade algoritmer. När systemet beta-testats har vi fortsatt iterera på det enligt den feedback som kommit in från kommunerna.<br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Vi har byggt den tekniska lösningen från grunden i nära samarbete med teamet på inRikta och kommuner. I det ingår allt från databashantering till frontendutveckling. Systemet bygger på stora mängder data som körs igenom utarbetade algoritmer. När systemet beta-testats har vi fortsatt iterera på det enligt den feedback som kommit in från kommunerna.<br />
                                  <br />
                                  Vårt samarbete med inRikta sträcker sig flera år tillbaka och nu ser vi fram emot att löpande utveckla nya features och bygga vidare på systemet.
                               </p>
