--- a/cases/koenigsegg/index.html
+++ b/cases/koenigsegg/index.html
@@ -526,7 +526,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När webbshopen designades hade den två tydliga krav. Den skulle utgå från den grafiska profilen och skapa igenkännedom från huvudsiten. Vår designer jobbade tätt med Koenigseggs kreativa team för ta fram en design som andades självsäkerhet och lyx för att spegla det exklusiva varumärket. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När webbshopen designades hade den två tydliga krav. Den skulle utgå från den grafiska profilen och skapa igenkännedom från huvudsiten. Vår designer jobbade tätt med Koenigseggs kreativa team för ta fram en design som andades självsäkerhet och lyx för att spegla det exklusiva varumärket. </p>
                               <div class="TextRowsstyle__QuoteContainer-sc-f5buiq-15 ksgAax">
                                  <div class="TextRowsstyle__QuoteTextWrapper-sc-f5buiq-16 dglaMf">
                                     <h5 class="text__heading_sm-sc-1xracbr-5 TextRowsstyle__Quote-sc-f5buiq-17 iehGeS bkMcSp">&quot;Vårt samarbete fick en lysande start med ett besök på fabriken i Ängelholm.&quot;</h5>
@@ -538,7 +538,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När designen var klar byggdes den i WordPress med WooCommerce som e-handelslösning. Vi skapade ett skräddarsytt tema för att dra nytta av de stabila funktioner som kommer med e-handelslösningen, men ändå få en unik design som endast Koenigsegg har tillgång till. På så vis blev resultatet en pålitlig e-handel som samtidigt är one of a kind. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">När designen var klar byggdes den i WordPress med WooCommerce som e-handelslösning. Vi skapade ett skräddarsytt tema för att dra nytta av de stabila funktioner som kommer med e-handelslösningen, men ändå få en unik design som endast Koenigsegg har tillgång till. På så vis blev resultatet en pålitlig e-handel som samtidigt är one of a kind. </p>
                            </div>
                         </div>
                      </div>
