--- a/cases/phrio/index.html
+++ b/cases/phrio/index.html
@@ -590,13 +590,13 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">När designen skulle tas fram ville vi skapa något intuitivt där användaren direkt kände sig hemma. Vi genomförde benchmarking mot andra sociala medier för att komma fram till vilka funktioner och beteenden användaren förväntar sig och vad vi ville ta vidare i vår design. Resultatet kläddes i ljusa färger som låter bilderna ta för sig. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">När designen skulle tas fram ville vi skapa något intuitivt där användaren direkt kände sig hemma. Vi genomförde benchmarking mot andra sociala medier för att komma fram till vilka funktioner och beteenden användaren förväntar sig och vad vi ville ta vidare i vår design. Resultatet kläddes i ljusa färger som låter bilderna ta för sig. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Appen är byggd i React Native som är en smidig lösning för att kunna använda samma kodbas både för Android och iOS. På så vis nästan halveras utvecklingstiden och det blir därmed kostnadseffektivt för kunden. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Appen är byggd i React Native som är en smidig lösning för att kunna använda samma kodbas både för Android och iOS. På så vis nästan halveras utvecklingstiden och det blir därmed kostnadseffektivt för kunden. <br />
                                  <br />
                                  För att man ska kunna tagga en produkt i en bild behöver produkten finnas registrerad, och ni kan ju tänka er hur många produkter man snabbt kommer upp i bara på ett enda inredningsföretag. För att snabba på processen byggde vi en produktimport som sköter det automatiskt. 
                               </p>
