--- a/cases/vass/index.html
+++ b/cases/vass/index.html
@@ -519,7 +519,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Tillsammans med Vass gick vi igenom målen för hemsidan och samlade inspiration till hur den nya siten skulle utformas. Sedan jobbade vi i flera rundor med designen där kunden fick möjlighet att ge feedback på våra förslag tills vi hittade helt rätt: en självsäker men varm känsla där byråns case får möjlighet att glänsa. <br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Tillsammans med Vass gick vi igenom målen för hemsidan och samlade inspiration till hur den nya siten skulle utformas. Sedan jobbade vi i flera rundor med designen där kunden fick möjlighet att ge feedback på våra förslag tills vi hittade helt rätt: en självsäker men varm känsla där byråns case får möjlighet att glänsa. <br />
                                  <br />
                                  Vår designer inspirerades av loggans kantiga former och valde att använda den snedskurna kanten i s:en som ett återkommande element. Den används som avdelare mellan block, under knappar och som flimrande effekt över bild och video. Dessutom fanns redan en ikon med två liggande s som var som klippt och skuren till att användas som unik hamburgarmeny.  <br />
                                  <br />
@@ -530,7 +530,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Digital showroom</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Med många varumärken under sina vingar behövde Vass ett smidigt system för att visa upp alla produkter på ett inspirerande sätt. I bildbanken vi byggde, som kallas det digitala showroomet, kan media se information om produkterna, ladda ner pressbilder och till och med göra en förfrågan på att testa en produkt. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Med många varumärken under sina vingar behövde Vass ett smidigt system för att visa upp alla produkter på ett inspirerande sätt. I bildbanken vi byggde, som kallas det digitala showroomet, kan media se information om produkterna, ladda ner pressbilder och till och med göra en förfrågan på att testa en produkt. </p>
                            </div>
                         </div>
                      </div>
