--- a/cases/ysds/index.html
+++ b/cases/ysds/index.html
@@ -523,19 +523,19 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Uppdraget</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vårt uppdrag hos YSDS går ut på att förse deras CTO med ett flexibelt och snabbfotat tech-team redo att möta alla tänkbara tekniska utmaningar. Tillsammans ansvarar teamet för bolagets tekniska plattformar och system, men även för att vidareutveckla kundresan. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Vårt uppdrag hos YSDS går ut på att förse deras CTO med ett flexibelt och snabbfotat tech-team redo att möta alla tänkbara tekniska utmaningar. Tillsammans ansvarar teamet för bolagets tekniska plattformar och system, men även för att vidareutveckla kundresan. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Teamet</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">För att lösa uppgiften valde vi att sätta ihop ett team på fyra utvecklare. En av dem som tidigare varit konsult för YSDS blev tech lead i projektet och jobbar tillsammans med ytterligare tre fullstack-utvecklare. Våra tech-team är alltid flexibla och sätts ihop utifrån den specifika kundens behov. Vi kan snabbt justera teamets storlek efter projektets omfattning och t.ex. inkludera en designer i början av projektet för att sedan endast ha utvecklare aktiva. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">För att lösa uppgiften valde vi att sätta ihop ett team på fyra utvecklare. En av dem som tidigare varit konsult för YSDS blev tech lead i projektet och jobbar tillsammans med ytterligare tre fullstack-utvecklare. Våra tech-team är alltid flexibla och sätts ihop utifrån den specifika kundens behov. Vi kan snabbt justera teamets storlek efter projektets omfattning och t.ex. inkludera en designer i början av projektet för att sedan endast ha utvecklare aktiva. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Att arbeta med ett tech-team</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Eftersom våra konsulter är vana att jobba ihop och har väl inarbetade processer går det fort att börja producera resultat. Med en CTO från YSDS har kunden alltid stenkoll på vad som görs och teamet samarbetar dagligen med avstämningar och show & tells.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Eftersom våra konsulter är vana att jobba ihop och har väl inarbetade processer går det fort att börja producera resultat. Med en CTO från YSDS har kunden alltid stenkoll på vad som görs och teamet samarbetar dagligen med avstämningar och show & tells.</p>
                            </div>
                         </div>
                      </div>
