--- a/cases/zelmerlow-bjorkman-foundation/index.html
+++ b/cases/zelmerlow-bjorkman-foundation/index.html
@@ -564,7 +564,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Ny kraft åt den digitala insamlingen</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Zelmerlöw & Björkman Foundation har genom åren främst arbetat med event och fysiska insamlingsaktiviteter, men märkte snabbt under pandemin hur sårbart det är. Därför vill man etablera en digital närvaro och börja bygga upp den digitala insamlingen som komplement till övrig insamling. Med dåvarande webbplats och gåvoshop var det inte möjligt att ta insamlingsarbetet till nästa nivå och därför vände sig stiftelsen till oss för hjälp.<br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Zelmerlöw & Björkman Foundation har genom åren främst arbetat med event och fysiska insamlingsaktiviteter, men märkte snabbt under pandemin hur sårbart det är. Därför vill man etablera en digital närvaro och börja bygga upp den digitala insamlingen som komplement till övrig insamling. Med dåvarande webbplats och gåvoshop var det inte möjligt att ta insamlingsarbetet till nästa nivå och därför vände sig stiftelsen till oss för hjälp.<br />
                                  <br />
                                  – Uppdraget handlade mycket om att sätta insamlingen i fokus, att göra det enklare att ge och samtidigt förmedla vad man som givare är med och bidrar till, säger Jenny Norelius, kommunikationsansvarig på Zelmerlöw & Björkman Foundation.<br />
                                  <br />
@@ -577,13 +577,13 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">En webb som gör det enkelt</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Webbplatsen ska vara ett hjälpmedel för verksamheten, inte ett hinder. Därför utvecklades den nya siten med fokus på att göra den lättadministrerad och att automatisera så mycket som möjligt. Vi hittade en bra balans mellan att erbjuda frihet att bygga upp sidorna flexibelt, men ändå få information på plats automatiskt för att minimera dubbelarbete. Tack vare det är webbplatsen enkel att administrera trots att många olika volontärer hjälper till att hantera den.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Webbplatsen ska vara ett hjälpmedel för verksamheten, inte ett hinder. Därför utvecklades den nya siten med fokus på att göra den lättadministrerad och att automatisera så mycket som möjligt. Vi hittade en bra balans mellan att erbjuda frihet att bygga upp sidorna flexibelt, men ändå få information på plats automatiskt för att minimera dubbelarbete. Tack vare det är webbplatsen enkel att administrera trots att många olika volontärer hjälper till att hantera den.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">På plats på Kenswed</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Det visade sig att vår designer Linda var mer än bekant med Kenswed. När hon gick i gymnasiet var hennes klass på besök i skolan, och sedan kom några av eleverna till hennes skola i Sverige. Upplevelsen på plats blev en perfekt inspirationskälla till designarbetet.<br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Det visade sig att vår designer Linda var mer än bekant med Kenswed. När hon gick i gymnasiet var hennes klass på besök i skolan, och sedan kom några av eleverna till hennes skola i Sverige. Upplevelsen på plats blev en perfekt inspirationskälla till designarbetet.<br />
                                  <br />
                                  När designen togs fram låg fokus på att förmedla Kenswed i bilder. Webbplatsen skulle visa upp mycket av verksamheten och arbetet som sker i på plats i Kenya. Många av ungdomarna kommer från tuffa förhållanden, men genom att lyfta fram eleverna och deras drömmar kunde vi berätta om verksamheten på ett positivt sätt. 
                               </p>
@@ -598,7 +598,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">En bättre värld med hjälp av tech</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vi har valt att engagera oss i Zelmerlöw Björkman Foundation för att det ger oss möjlighet att bidra till en bättre värld med hjälp av vår expertis. Vi vill använda tech för att göra skillnad i världen. Därför har vi byggt den nya webbplatsen och bidragit med teknisk rådgivning, och gjort en stor del av arbetet pro bono.<br />
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Vi har valt att engagera oss i Zelmerlöw Björkman Foundation för att det ger oss möjlighet att bidra till en bättre värld med hjälp av vår expertis. Vi vill använda tech för att göra skillnad i världen. Därför har vi byggt den nya webbplatsen och bidragit med teknisk rådgivning, och gjort en stor del av arbetet pro bono.<br />
                                  <br />
                                  Dessutom var vi på plats när insamlingsgalan gick av stapeln. Där hade vi äran att sitta bredvid en av kvällens huvudpersoner Lorraine, som studerar IT på universitetet tack vare stiftelsens stipendium. Det var intressant att få höra om hennes upplevelser av skolan och ge våra tips om branschen.<br />
                                  <br />
