--- a/vara-tjanster/anlita-ett-tech-team/index.html
+++ b/vara-tjanster/anlita-ett-tech-team/index.html
@@ -529,19 +529,19 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Tech-team as a Service</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Våra agila team står redo för dig som vill ta dig an större digitala utmaningar. Oavsett om du är entreprenör eller intraprenör hjälper vi dig bygga upp ett fungerande team med rätt kompetens. Vi har inarbetade processer och strukturer för att snabbt sätta ihop ett team med fokus på att leverera resultat.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Våra agila team står redo för dig som vill ta dig an större digitala utmaningar. Oavsett om du är entreprenör eller intraprenör hjälper vi dig bygga upp ett fungerande team med rätt kompetens. Vi har inarbetade processer och strukturer för att snabbt sätta ihop ett team med fokus på att leverera resultat.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Att arbeta med ett tech-team</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Eftersom våra konsulter är vana att jobba ihop och har väl inarbetade processer går det fort att börja producera resultat. Du som kund har alltid stenkoll på vad som görs och teamet samarbetar dagligen med avstämningar och show & tells.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Eftersom våra konsulter är vana att jobba ihop och har väl inarbetade processer går det fort att börja producera resultat. Du som kund har alltid stenkoll på vad som görs och teamet samarbetar dagligen med avstämningar och show & tells.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Skalbara lösningar</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vi vet att de tekniska behoven varierar kraftigt i relation till våra kunders utmaningar och ambitioner. Därför är vi väldigt flexibla och hjälper dig att skala upp eller ner för att hela tiden matcha dina behov.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Vi vet att de tekniska behoven varierar kraftigt i relation till våra kunders utmaningar och ambitioner. Därför är vi väldigt flexibla och hjälper dig att skala upp eller ner för att hela tiden matcha dina behov.</p>
                            </div>
                         </div>
                      </div>
