--- a/vara-tjanster/ta-hjalp-av-en-konsult/index.html
+++ b/vara-tjanster/ta-hjalp-av-en-konsult/index.html
@@ -536,19 +536,19 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Konsulter inom utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vi har lång erfarenhet av bemanning av utvecklare med fokus på webb- och apputveckling. Våra drivna konsulter blir snabbt självgående och fokuserar på att skapa största möjliga värde för er verksamhet. Vi har ett brett nätverk av konsulter inom många olika utvecklingsspråk och kan matcha ihop ditt uppdrag med rätt konsult utifrån dess expertis. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Vi har lång erfarenhet av bemanning av utvecklare med fokus på webb- och apputveckling. Våra drivna konsulter blir snabbt självgående och fokuserar på att skapa största möjliga värde för er verksamhet. Vi har ett brett nätverk av konsulter inom många olika utvecklingsspråk och kan matcha ihop ditt uppdrag med rätt konsult utifrån dess expertis. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Konsulter inom User Experience (UX) </h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Våra UX-konsulter ser till att sätta användaren i centrum. Genom analyser, research och tester förbättras användarupplevelsen under en iterativ process. Oavsett om fokus ligger på att öka konvertering eller förenkla flöden står våra konsulter till tjänst för skapa den bästa möjliga digitala upplevelsen.  </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Våra UX-konsulter ser till att sätta användaren i centrum. Genom analyser, research och tester förbättras användarupplevelsen under en iterativ process. Oavsett om fokus ligger på att öka konvertering eller förenkla flöden står våra konsulter till tjänst för skapa den bästa möjliga digitala upplevelsen.  </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Konsulter inom User Interface (UI) </h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Bra tech är snygg tech! Våra duktiga UI-konsulter hjälper till att höja standarden på alla typer av digitala lösningar. Vi älskar estetiskt tilltalande tech och vet hur stor skillnad designen har för intrycket av slutresultatet. Självklart görs designen enligt er grafiska profil, eller så kan våra konsulter hjälpa till att ta fram en helt ny visuell identitet för er produkt.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: #000;">Bra tech är snygg tech! Våra duktiga UI-konsulter hjälper till att höja standarden på alla typer av digitala lösningar. Vi älskar estetiskt tilltalande tech och vet hur stor skillnad designen har för intrycket av slutresultatet. Självklart görs designen enligt er grafiska profil, eller så kan våra konsulter hjälpa till att ta fram en helt ny visuell identitet för er produkt.</p>
                            </div>
                         </div>
                      </div>
