--- a/cases/index.html
+++ b/cases/index.html
@@ -406,7 +406,7 @@
                            <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
                         </div>
                      </a>
-                     <a href="kontakta-oss/index.html" target="" class="Headerstyle__Cta-sc-11sf5xg-17 hvhSAY">Kontakta oss</a>
+                     <a href="../kontakta-oss/index.html" target="" class="Headerstyle__Cta-sc-11sf5xg-17 hvhSAY">Kontakta oss</a>
                      <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
                         <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                         <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
@@ -423,10 +423,18 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="vara-tjanster/ui-ux-design/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="vara-tjanster/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="vara-tjanster/starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC">
+                                 <a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="../index.html">Vår expertis</a>
+                                 <a href="../vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a>
+                                 <a href="../vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a>
+                                 <a href="../vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a>
+                                 <a href="../vara-tjanster/ui-ux-design/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="vara-tjanster/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a>
+                                 <a href="../vara-tjanster/starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
-                           <a href="om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="news/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Nyheter</a><a href="karriar/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Karriär</a><a href="kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
+                           <a href="../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a>
+                           <a href="../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a>
+                           <a href="../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
                            <div class="SideContactFormstyled__Container-sc-xpl7fe-0 gNFoLC">
                               <div color="#0C3A53;Default" class="SideContactFormstyled__Button-sc-xpl7fe-1 jbaOBC">
                                  Boka introduktionsmöte<!-- --> 
@@ -886,26 +894,25 @@
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Vår expertis</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/ui-ux-design/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/ui-ux-design/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Våra tjänster</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/starta-ett-projekt/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Starta ett projekt</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/starta-ett-projekt/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Starta ett projekt</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Om oss</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="om-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Om oss</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="cases/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Våra case</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="karriar/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Karriär</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="kontakta-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Kontakt</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="hallbarhet/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Hållbarhet</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../om-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Om oss</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../cases/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Våra case</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../kontakta-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Kontakt</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../hallbarhet/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Hållbarhet</a></div>
                               </div>
                            </div>
                         </div>
