--- a/cases/the-good-talents/index.html
+++ b/cases/the-good-talents/index.html
@@ -533,19 +533,19 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Uppstart</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Projektet drog igång med ett uppstartsmöte där vi samlade in alla tankar, idéer och behov som The Good Talents samlat på sig. Vi benade ut vad flaskhalsen varit i deras tidigare hemsida och definierade syftet med den nya. Genom att från början förstå vilka som ska använda hemsidan och vad den ska användas för skapar vi bra förutsättningar för ett lyckat projekt.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Projektet drog igång med ett uppstartsmöte där vi samlade in alla tankar, idéer och behov som The Good Talents samlat på sig. Vi benade ut vad flaskhalsen varit i deras tidigare hemsida och definierade syftet med den nya. Genom att från början förstå vilka som ska använda hemsidan och vad den ska användas för skapar vi bra förutsättningar för ett lyckat projekt.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Design</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Sedan var det dags för designern att sätta tänderna i de starka färgerna och komma på en lösning som fick det att kännas mer moget. Redan i det första förslaget presenterades den mörka bakgrunden och därefter visades alternativ där de olika färgerna var i fokus. The Good Talents valde rosa som den huvudsakliga färgen och därmed var designinriktningen klar. Då ritades de andra sidorna upp och designen lämnades sedan över till utvecklaren.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Sedan var det dags för designern att sätta tänderna i de starka färgerna och komma på en lösning som fick det att kännas mer moget. Redan i det första förslaget presenterades den mörka bakgrunden och därefter visades alternativ där de olika färgerna var i fokus. The Good Talents valde rosa som den huvudsakliga färgen och därmed var designinriktningen klar. Då ritades de andra sidorna upp och designen lämnades sedan över till utvecklaren.</p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Hemsidan byggdes med WordPress som redigeringssystem där varje sektion är ett fristående block som kunden kan lägga till på de sidor de önskar. Med flexibla block kan kunden själv bygga upp sidor, lägga till eller ta bort block. Det brukar vara en uppskattad lösning som passade perfekt även för The Good Talents för att underlätta hanteringen av hemsidan.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Hemsidan byggdes med WordPress som redigeringssystem där varje sektion är ett fristående block som kunden kan lägga till på de sidor de önskar. Med flexibla block kan kunden själv bygga upp sidor, lägga till eller ta bort block. Det brukar vara en uppskattad lösning som passade perfekt även för The Good Talents för att underlätta hanteringen av hemsidan.</p>
                            </div>
                         </div>
                      </div>
